добавлен каркас футера

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="places__card">
           <h2 class="places__card-title">Куршская коса</h2>
           <img class="places__card-image" alt="" />
-          <p class="places__card-website"></p>
+          <p class="places__card-website">URL></p>
           <p class="places__card-paragraph">
             Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
             горизонта — спокойного Куршского залива с одной стороны и
@@ -170,7 +170,18 @@
         </p>
       </section>
 
-      <section class="footer"></section>
+      <section class="footer">
+        <div class="footer__container">
+          <ul class="footer__links">
+            <li class="footer__link">Карты</li>
+            <li class="footer__link">Погода</li>
+            <li class="footer__link">Расписание</li>
+            <li class="footer__link">Календарь</li>
+            <li class="footer__link">Путешествия</li>
+          </ul>
+          <p class="footer__copyright">&copy; 2020. Дутова Елизавета</p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
