первые два блока

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <section class="header">
         <div class="header__logo"></div>
         <div class="header__lang-links">
-          <a class="header__lang-link header__lang-link_ru" href="#">ru</a>
-          <a class="header__lang-link header__lang-link_en" href="#">en</a>
+          <a class="header__lang-link header__lang-link_ru" href="#">Ru</a>
+          <a class="header__lang-link header__lang-link_en" href="#">En</a>
         </div>
       </section>
 
@@ -23,7 +23,7 @@
         <p class="lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
-        <img class="lead__image" alt="плацкарт" />
+        <img class="lead__image" alt="плацкарт" src="./images/lead-polka.jpg">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
 
@@ -54,18 +54,20 @@
       </section>
 
       <section class="photo-grid">
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
-        <img class="photo-grid__item" alt="" />
+        <ul class="photo-grid__template">
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+          <li><img class="photo-grid__item" alt="" /></li>
+        </ul>
       </section>
 
       <section class="places">
