--- a/index.html
+++ b/index.html
@@ -23,50 +23,126 @@
         <p class="lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
-        <img class="lead__image" alt="плацкарт" src="./images/lead-polka.jpg">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <img class="lead__image" alt="плацкарт" src="./images/lead-polka.jpg" />
+        <p class="lead__caption">Ваша полка — верхняя</p>
       </section>
 
       <section class="intro">
-        <p class="intro__title">Чего мы там не видели?</p>
-        <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
-          36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома,
-          не видели? На самом деле, Россия — это целая вселенная с ласковым
-          морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
-          увидеть все эти красоты можно без миллионов на счету, загранпаспорта и
-          многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
-          мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и
-          проехала 20 тысяч километров по родной стране. Мы выбрали и описали
-          некоторые интересные места, достойные вашего отпуска.
-        </p>
-        <ul class="intro__list">
-          <li class="intro__list-item">Часовых поясов 11</li>
-          <li class="intro__list-item">
-            Объектов природного наследия ЮНЕСКО 12
-          </li>
-          <li class="intro__list-item">
-            Объектов культурного наследия ЮНЕСКО 16
-          </li>
-          <li class="intro__list-item">Природных заповедников 105</li>
-          <li class="intro__list-item">Аэропортов 241</li>
-        </ul>
+        <div class="intro__card">
+          <p class="intro__title">Чего мы там не видели?</p>
+          <p class="intro__text">
+            По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
+            36% планируют провести отпуск в родной стране. Мол, чего мы тут,
+            дома, не видели? На самом деле, Россия — это целая вселенная с
+            ласковым морем юга, густыми лесами Саян и суровыми льдами плато
+            Путорана. А ещё увидеть все эти красоты можно без миллионов на
+            счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+            Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+            усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+            стране. Мы выбрали и описали некоторые интересные места, достойные
+            вашего отпуска.
+          </p>
+          <ul class="intro__list">
+            <li class="intro__list-item"><b>Часовых поясов </b>11</li>
+            <li class="intro__list-item">
+              <b>Объектов природного наследия ЮНЕСКО </b>12
+            </li>
+            <li class="intro__list-item">
+              <b>Объектов культурного наследия ЮНЕСКО </b>16
+            </li>
+            <li class="intro__list-item"><b>Природных заповедников </b>105</li>
+            <li class="intro__list-item"><b>Аэропортов </b>241</li>
+          </ul>
+        </div>
       </section>
 
       <section class="photo-grid">
         <ul class="photo-grid__template">
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
-          <li><img class="photo-grid__item" alt="" /></li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="купе"
+              src="./images/photo-grid-train.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="горы"
+              src="./images/photo-grid-atharva-tulsi.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="туман"
+              src="./images/photo-grid-tuman.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="сочи"
+              src="./images/photo-grid-sochi.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="колесо"
+              src="./images/photo-grid-arisa.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="пляж"
+              src="./images/photo-grid-baikal.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="эльбрус"
+              src="./images/photo-grid-elbrus.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="переход"
+              src="./images/photo-grid-kondratiev.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="камчатка"
+              src="./images/photo-grid-kamchatka-1.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="горы камчатки"
+              src="./images/photo-grid-kamchatka-2.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="байкал"
+              src="./images/photo-grid-baikal-2.jpg"
+            />
+          </li>
+          <li>
+            <img
+              class="photo-grid__item"
+              alt="облака"
+              src="./images/photo-grid-ergaki.jpg"
+            />
+          </li>
+
         </ul>
       </section>
 
