блок карточки и блок кавер

--- a/index.html
+++ b/index.html
@@ -142,101 +142,134 @@
               src="./images/photo-grid-ergaki.jpg"
             />
           </li>
-
         </ul>
       </section>
 
       <section class="places">
-        <div class="places__card">
-          <h2 class="places__card-title">Куршская коса</h2>
-          <img class="places__card-image" alt="" />
-          <p class="places__card-website">URL></p>
-          <p class="places__card-paragraph">
-            Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-            горизонта — спокойного Куршского залива с одной стороны и
-            подёрнутого рябью волн Балтийского моря с другой. Уникальная
-            природная зона на краю российского анклава.
-          </p>
-          <p class="places__card-paragraph">
-            На этом Калининградская область не заканчивается. Для
-            путешественника и исследователя там же по соседству — самая западная
-            точка России, Балтийская коса, — и немецкое наследие россыпи
-            небольших приморских городов. Атмосфера здешних мест исключает
-            суету, окуная в спокойствие природы и запах стального, прохладного
-            моря.
-          </p>
+        <div class="two-columns">
+          <div class="two-columns__first-column">
+            <h2 class="two-columns__first-column-title">Куршская коса</h2>
+            <img class="two-columns__first-column-image" alt="куршская коса" src="images/place-kosa.jpg">
+          </div>
+
+          <div class="two-columns__second-column">
+            <p class="two-columns__second-column-url">URL</p>
+            <a class="two-columns__second-column-link">park-kosa.ru</a>
+            <p class="two-columns__second-column-paragraph">
+              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+              горизонта — спокойного Куршского залива с одной стороны и
+              подёрнутого рябью волн Балтийского моря с другой. Уникальная
+              природная зона на краю российского анклава.
+            </p>
+            <p class="two-columns__second-column-paragraph">
+              На этом Калининградская область не заканчивается. Для
+              путешественника и исследователя там же по соседству — самая
+              западная точка России, Балтийская коса, — и немецкое наследие
+              россыпи небольших приморских городов. Атмосфера здешних мест
+              исключает суету, окуная в спокойствие природы и запах стального,
+              прохладного моря.
+            </p>
+          </div>
         </div>
 
-        <div class="places__card">
-          <h2 class="places__card-title">Кольский</h2>
-          <img class="places__card-image" alt="" />
-          <p class="places__card-website"></p>
-          <p class="places__card-paragraph">
-            Почти весь полуостров находится за Полярным кругом. Саамская тундра,
-            от которой на юг — тайга, а на север — Ледовитый океан,
-            прикидывающийся Баренцевым морем.
-          </p>
-          <p class="places__card-paragraph">
-            Возможно, вы смотрели Звягинцева и даже слышали историю арктического
-            фестиваля в Териберке. Возможно, слово «Хибины» не осталось под
-            снегом школьных воспоминаний об уроках географии. Возможно, вы не
-            интересовались пронизывающей земную кору сверхглубокой скважиной, а
-            от апатитов вас давно накрывает апатия. Но ваша мечта увидеть
-            северное сияние начинает сбываться с билетом в Мурманск.
-          </p>
+        <div class="two-columns">
+          <div class="two-columns__first-column">
+            <h2 class="two-columns__first-column-title">Кольский</h2>
+            <img class="two-columns__first-column-image" alt="кольский" src="./images/place-kolsky.jpg">
+          </div>
+
+          <div class="two-columns__second-column">
+            <p class="two-columns__second-column-url">URL</p>
+            <a class="two-columns__second-column-link">National Geographic</a>
+            <p class="two-columns__second-column-paragraph">
+              Почти весь полуостров находится за Полярным кругом. Саамская
+              тундра, от которой на юг — тайга, а на север — Ледовитый океан,
+              прикидывающийся Баренцевым морем.
+            </p>
+            <p class="two-columns__second-column-paragraph">
+              Возможно, вы смотрели Звягинцева и даже слышали историю
+              арктического фестиваля в Териберке. Возможно, слово «Хибины» не
+              осталось под снегом школьных воспоминаний об уроках географии.
+              Возможно, вы не интересовались пронизывающей земную кору
+              сверхглубокой скважиной, а от апатитов вас давно накрывает апатия.
+              Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+              в Мурманск.
+            </p>
+          </div>
         </div>
 
-        <div class="places__card">
-          <h2 class="places__card-title">Алтай</h2>
-          <img class="places__card-image" alt="" />
-          <p class="places__card-website"></p>
-          <p class="places__card-paragraph">
-            Алтай — одно из красивейших мест в России. В первую очередь из-за
-            гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
-            горные реки и озёра. А если вы откроете в автомобиле окна, сможете
-            познакомиться с невидимым чудом здешних мест — горным воздухом.
-          </p>
-          <p class="places__card-paragraph">
-            Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
-            вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая
-            бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули.
-            И знаменитые манулы — тоже обитатели Алтайского края.
-          </p>
+        <div class="two-columns">
+          <div class="two-columns__first-column">
+            <h2 class="two-columns__first-column-title">Алтай</h2>
+            <img class="two-columns__first-column-image" alt="алтай" src="./images/place-altai.jpg">
+          </div>
+
+          <div class="two-columns__second-column">
+            <p class="two-columns__second-column-url">URL</p>
+            <a class="two-columns__second-column-link">Facebook</a>
+            <p class="two-columns__second-column-paragraph">
+              Алтай — одно из красивейших мест в России. В первую очередь из-за
+              гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+              соснами, горные реки и озёра. А если вы откроете в автомобиле
+              окна, сможете познакомиться с невидимым чудом здешних мест —
+              горным воздухом.
+            </p>
+            <p class="two-columns__second-column-paragraph">
+              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+              Так вы увидите всё разнообразие местной флоры и фауны. По лесам
+              Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
+              косули. И знаменитые манулы — тоже обитатели Алтайского края.
+            </p>
+          </div>
         </div>
 
-        <div class="places__card">
-          <h2 class="places__card-title">Зимний Байкал</h2>
-          <img class="places__card-image" alt="" />
-          <p class="places__card-website"></p>
-          <p class="places__card-paragraph">
-            Всем известен Байкал как крупнейшее озеро в мире. Многие также
-            знают, что это самый большой источник пресной воды и одно из
-            красивейших мест в России.
-          </p>
-          <p class="places__card-paragraph">
-            Конечно, это всё так. Но Байкал ещё идеальное место для соревнований
-            по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к
-            мотоциклу, и тандем старается развить как можно бóльшую скорость на
-            льду. В марте 2019 года на фестивале «Байкальская миля» был
-            поставлен мировой рекорд — 197.011 км/ч.
-          </p>
+        <div class="two-columns">
+          <div class="two-columns__first-column">
+            <h2 class="two-columns__first-column-title">Зимний Байкал</h2>
+            <img class="two-columns__first-column-image" alt="зимнее озеро" src="images/place-winter-baikal.jpg">
+          </div>
+
+          <div class="two-columns__second-column">
+            <p class="two-columns__second-column-url">URL</p>
+            <a class="two-columns__second-column-link"
+              >https://vk.com/baikalmile</a
+            >
+            <p class="two-columns__second-column-paragraph">
+              Всем известен Байкал как крупнейшее озеро в мире. Многие также
+              знают, что это самый большой источник пресной воды и одно из
+              красивейших мест в России.
+            </p>
+            <p class="two-columns__second-column-paragraph">
+              Конечно, это всё так. Но Байкал ещё идеальное место
+              для соревнований по скийорингу. Это такой вид спорта, когда лыжник
+              привязывает себя к мотоциклу, и тандем старается развить как можно
+              бóльшую скорость на льду. В марте 2019 года на фестивале
+              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+            </p>
+          </div>
         </div>
 
-        <div class="places__card">
-          <h2 class="places__card-title">Карелия</h2>
-          <img class="places__card-image" alt="" />
-          <p class="places__card-website"></p>
-          <p class="places__card-paragraph">
-            Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-            сибирская лиственница не растёт западнее Водлозера. Зато здесь она
-            вымахивает на 30 метров — леса карельских национальных парков из-за
-            непроходимых болот никогда не знали топора. Некоторым соснам уже
-            больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему
-            солнце раньше, чем увидал его Иван Грозный. В девственном лесу на
-            сотню километров не встретишь тропы. А на редких тропинках деревья в
-            паре метров от земли помечены медвежьими когтями. Чтобы все знали,
-            кто тут хозяин.
-          </p>
+        <div class="two-columns">
+          <div class="two-columns__first-column">
+            <h2 class="two-columns__first-column-title">Карелия</h2>
+            <img class="two-columns__first-column-image" alt="карелия" src="images/place-karelia.jpg">
+          </div>
+
+          <div class="two-columns__second-column">
+            <p class="two-columns__second-column-url">URL</p>
+            <a class="two-columns__second-column-link">http://vodlozero.ru/</a>
+            <p class="two-columns__second-column-paragraph">
+              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+              сибирская лиственница не растёт западнее Водлозера. Зато здесь она
+              вымахивает на 30 метров — леса карельских национальных парков
+              из-за непроходимых болот никогда не знали топора. Некоторым соснам
+              уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+              видевшему солнце раньше, чем увидал его Иван Грозный. В
+              девственном лесу на сотню километров не встретишь тропы. А на
+              редких тропинках деревья в паре метров от земли помечены
+              медвежьими когтями. Чтобы все знали, кто тут хозяин.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -251,11 +284,11 @@
       <section class="footer">
         <div class="footer__container">
           <ul class="footer__links">
-            <li class="footer__link">Карты</li>
-            <li class="footer__link">Погода</li>
-            <li class="footer__link">Расписание</li>
-            <li class="footer__link">Календарь</li>
-            <li class="footer__link">Путешествия</li>
+            <li><a class="footer__link" href="#">Карты</a></li>
+            <li><a class="footer__link" href="#">Погода</a></li>
+            <li><a class="footer__link" href="#">Расписание</a></li>
+            <li><a class="footer__link" href="#">Календарь</a></li>
+            <li><a class="footer__link" href="#">Путешествия</a></li>
           </ul>
           <p class="footer__copyright">&copy; 2020. Дутова Елизавета</p>
         </div>
