--- a/index.html
+++ b/index.html
@@ -274,11 +274,13 @@
       </section>
 
       <section class="cover">
+        <div class="cover__container">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
           до Байкала на электричках.
         </p>
+      </div>
       </section>
 
       <section class="footer">
