--- a/index.html
+++ b/index.html
@@ -147,21 +147,30 @@
 
       <section class="places">
         <div class="two-columns">
-          <div class="two-columns__first-column">
-            <h2 class="two-columns__first-column-title">Куршская коса</h2>
-            <img class="two-columns__first-column-image" alt="куршская коса" src="images/place-kosa.jpg">
+          <h2 class="two-columns__title">Куршская коса</h2>
+          <div class="url-zone">
+            <p class="two-columns__url">URL</p>
+            <a
+              class="two-columns__link"
+              href="http://park-kosa.ru"
+              target="blank"
+              >park-kosa.ru</a
+            >
           </div>
+          <img
+            class="two-columns__image"
+            alt="куршская коса"
+            src="images/place-kosa.jpg"
+          />
 
-          <div class="two-columns__second-column">
-            <p class="two-columns__second-column-url">URL</p>
-            <a class="two-columns__second-column-link">park-kosa.ru</a>
-            <p class="two-columns__second-column-paragraph">
+          <div class="two-columns__paragraphs">
+            <p class="two-columns__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.
             </p>
-            <p class="two-columns__second-column-paragraph">
+            <p class="two-columns__paragraph">
               На этом Калининградская область не заканчивается. Для
               путешественника и исследователя там же по соседству — самая
               западная точка России, Балтийская коса, — и немецкое наследие
@@ -173,20 +182,28 @@
         </div>
 
         <div class="two-columns">
-          <div class="two-columns__first-column">
-            <h2 class="two-columns__first-column-title">Кольский</h2>
-            <img class="two-columns__first-column-image" alt="кольский" src="./images/place-kolsky.jpg">
+          <h2 class="two-columns__title">Кольский</h2>
+          <div class="url-zone">
+            <p class="two-columns__url">URL</p>
+            <a
+              class="two-columns__link"
+              href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              target="blank"
+              >National Geographic</a
+            >
           </div>
-
-          <div class="two-columns__second-column">
-            <p class="two-columns__second-column-url">URL</p>
-            <a class="two-columns__second-column-link">National Geographic</a>
-            <p class="two-columns__second-column-paragraph">
+          <img
+            class="two-columns__image"
+            alt="кольский"
+            src="./images/place-kolsky.jpg"
+          />
+          <div class="two-columns__paragraphs">
+            <p class="two-columns__paragraph">
               Почти весь полуостров находится за Полярным кругом. Саамская
               тундра, от которой на юг — тайга, а на север — Ледовитый океан,
               прикидывающийся Баренцевым морем.
             </p>
-            <p class="two-columns__second-column-paragraph">
+            <p class="two-columns__paragraph">
               Возможно, вы смотрели Звягинцева и даже слышали историю
               арктического фестиваля в Териберке. Возможно, слово «Хибины» не
               осталось под снегом школьных воспоминаний об уроках географии.
@@ -199,22 +216,30 @@
         </div>
 
         <div class="two-columns">
-          <div class="two-columns__first-column">
-            <h2 class="two-columns__first-column-title">Алтай</h2>
-            <img class="two-columns__first-column-image" alt="алтай" src="./images/place-altai.jpg">
+          <h2 class="two-columns__title">Алтай</h2>
+          <div class="url-zone">
+            <p class="two-columns__url">URL</p>
+            <a
+              class="two-columns__link"
+              href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+              target="blank"
+              >Facebook</a
+            >
           </div>
-
-          <div class="two-columns__second-column">
-            <p class="two-columns__second-column-url">URL</p>
-            <a class="two-columns__second-column-link">Facebook</a>
-            <p class="two-columns__second-column-paragraph">
+          <img
+            class="two-columns__image"
+            alt="алтай"
+            src="./images/place-altai.jpg"
+          />
+          <div class="two-columns__paragraphs">
+            <p class="two-columns__paragraph">
               Алтай — одно из красивейших мест в России. В первую очередь из-за
               гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
               соснами, горные реки и озёра. А если вы откроете в автомобиле
               окна, сможете познакомиться с невидимым чудом здешних мест —
               горным воздухом.
             </p>
-            <p class="two-columns__second-column-paragraph">
+            <p class="two-columns__paragraph">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
               Так вы увидите всё разнообразие местной флоры и фауны. По лесам
               Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
@@ -224,22 +249,29 @@
         </div>
 
         <div class="two-columns">
-          <div class="two-columns__first-column">
-            <h2 class="two-columns__first-column-title">Зимний Байкал</h2>
-            <img class="two-columns__first-column-image" alt="зимнее озеро" src="images/place-winter-baikal.jpg">
-          </div>
-
-          <div class="two-columns__second-column">
-            <p class="two-columns__second-column-url">URL</p>
-            <a class="two-columns__second-column-link"
+          <h2 class="two-columns__title">Зимний Байкал</h2>
+          <div class="url-zone">
+            <p class="two-columns__url">URL</p>
+            <a
+              class="two-columns__link"
+              href="https://vk.com/baikalmile"
+              target="blank"
               >https://vk.com/baikalmile</a
             >
-            <p class="two-columns__second-column-paragraph">
+          </div>
+          <img
+            class="two-columns__image"
+            alt="зимнее озеро"
+            src="images/place-winter-baikal.jpg"
+          />
+
+          <div class="two-columns__paragraphs">
+            <p class="two-columns__paragraph">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
               знают, что это самый большой источник пресной воды и одно из
               красивейших мест в России.
             </p>
-            <p class="two-columns__second-column-paragraph">
+            <p class="two-columns__paragraph">
               Конечно, это всё так. Но Байкал ещё идеальное место
               для соревнований по скийорингу. Это такой вид спорта, когда лыжник
               привязывает себя к мотоциклу, и тандем старается развить как можно
@@ -250,15 +282,24 @@
         </div>
 
         <div class="two-columns">
-          <div class="two-columns__first-column">
-            <h2 class="two-columns__first-column-title">Карелия</h2>
-            <img class="two-columns__first-column-image" alt="карелия" src="images/place-karelia.jpg">
+          <h2 class="two-columns__title">Карелия</h2>
+          <div class="url-zone">
+            <p class="two-columns__url">URL</p>
+            <a
+              class="two-columns__link"
+              href="http://vodlozero.ru"
+              target="blank"
+              >http://vodlozero.ru/</a
+            >
           </div>
+          <img
+            class="two-columns__image"
+            alt="карелия"
+            src="images/place-karelia.jpg"
+          />
 
-          <div class="two-columns__second-column">
-            <p class="two-columns__second-column-url">URL</p>
-            <a class="two-columns__second-column-link">http://vodlozero.ru/</a>
-            <p class="two-columns__second-column-paragraph">
+          <div class="two-columns__paragraphs">
+            <p class="two-columns__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
               вымахивает на 30 метров — леса карельских национальных парков
@@ -274,23 +315,62 @@
       </section>
 
       <section class="cover">
-        <div class="cover__container">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">
-          По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
-          до Байкала на электричках.
-        </p>
-      </div>
+        <a
+          class="cover__container"
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          target="blank"
+        >
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">
+            По мотивам учебной темы о Транссибе и iframes — путешествие от
+            столицы до Байкала на электричках.
+          </p>
+        </a>
       </section>
 
       <section class="footer">
         <div class="footer__container">
           <ul class="footer__links">
-            <li><a class="footer__link" href="#">Карты</a></li>
-            <li><a class="footer__link" href="#">Погода</a></li>
-            <li><a class="footer__link" href="#">Расписание</a></li>
-            <li><a class="footer__link" href="#">Календарь</a></li>
-            <li><a class="footer__link" href="#">Путешествия</a></li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://yandex.ru/maps"
+                target="blank"
+                >Карты</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://yandex.ru/pogoda"
+                target="blank"
+                >Погода</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://rasp.yandex.ru"
+                target="blank"
+                >Расписание</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://calendar.yandex.ru"
+                target="blank"
+                >Календарь</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://travel.yandex.ru"
+                target="blank"
+                >Путешествия</a
+              >
+            </li>
           </ul>
           <p class="footer__copyright">&copy; 2020. Дутова Елизавета</p>
         </div>
