--- a/index.html
+++ b/index.html
@@ -264,7 +264,6 @@
             alt="зимнее озеро"
             src="images/place-winter-baikal.jpg"
           />
-
           <div class="two-columns__paragraphs">
             <p class="two-columns__paragraph">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -316,7 +315,7 @@
 
       <section class="cover">
         <a
-          class="cover__container"
+          class="cover__link"
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           target="blank"
         >
