--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <section class="places">
         <div class="two-columns">
           <h2 class="two-columns__title">Куршская коса</h2>
-          <div class="url-zone">
+          <div class="two-columns__url-zone">
             <p class="two-columns__url">URL</p>
             <a
               class="two-columns__link"
@@ -317,8 +317,7 @@
         <a
           class="cover__link"
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
-          target="blank"
-        >
+          target="blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе и iframes — путешествие от
