сделаны два ,htqrlfeyf

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         <div class="two-columns">
           <h2 class="two-columns__title">Кольский</h2>
-          <div class="url-zone">
+          <div class="two-columns__url-zone">
             <p class="two-columns__url">URL</p>
             <a
               class="two-columns__link"
@@ -217,7 +217,7 @@
 
         <div class="two-columns">
           <h2 class="two-columns__title">Алтай</h2>
-          <div class="url-zone">
+          <div class="two-columns__url-zone">
             <p class="two-columns__url">URL</p>
             <a
               class="two-columns__link"
@@ -250,7 +250,7 @@
 
         <div class="two-columns">
           <h2 class="two-columns__title">Зимний Байкал</h2>
-          <div class="url-zone">
+          <div class="two-columns__url-zone">
             <p class="two-columns__url">URL</p>
             <a
               class="two-columns__link"
@@ -282,7 +282,7 @@
 
         <div class="two-columns">
           <h2 class="two-columns__title">Карелия</h2>
-          <div class="url-zone">
+          <div class="two-columns__url-zone">
             <p class="two-columns__url">URL</p>
             <a
               class="two-columns__link"
