--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li class="intro__list-item"><b>Часовых поясов </b>11</li>
+            <li class="intro__list-item">Часовых поясов <span class="intro__list-item-accent">11</span></li>
             <li class="intro__list-item">
-              <b>Объектов природного наследия ЮНЕСКО </b>12
+              Объектов природного наследия ЮНЕСКО <span class="intro__list-item-accent">12</span>
             </li>
             <li class="intro__list-item">
-              <b>Объектов культурного наследия ЮНЕСКО </b>16
+              Объектов культурного наследия ЮНЕСКО <span class="intro__list-item-accent">16</span>
             </li>
-            <li class="intro__list-item"><b>Природных заповедников </b>105</li>
-            <li class="intro__list-item"><b>Аэропортов </b>241</li>
+            <li class="intro__list-item">Природных заповедников <span class="intro__list-item-accent">105</span></li>
+            <li class="intro__list-item">Аэропортов <span class="intro__list-item-accent">241</span></li>
           </ul>
         </div>
       </section>
@@ -147,171 +147,174 @@
       </section>
 
       <section class="places">
-        <div class="two-columns">
-          <h2 class="two-columns__title">Куршская коса</h2>
-          <div class="two-columns__url-zone">
-            <p class="two-columns__url">URL</p>
-            <a
-              class="two-columns__link"
-              href="http://park-kosa.ru"
-              target="blank"
-              >park-kosa.ru</a
-            >
-          </div>
-          <img
-            class="two-columns__image"
-            alt="куршская коса"
-            src="images/place-kosa.jpg"
-          />
+        <ul>
+          <li class="two-columns">
+            <h2 class="two-columns__title">Куршская коса</h2>
+              <div class="two-columns__url-zone">
+                <p class="two-columns__url">URL</p>
+                <a
+                  class="two-columns__link"
+                  href="http://park-kosa.ru"
+                  target="blank"
+                  >park-kosa.ru</a
+                >
+              </div>
+              <img
+                class="two-columns__image"
+                alt="куршская коса"
+                src="images/place-kosa.jpg"
+              />
+    
+              <div class="two-columns__paragraphs">
+                <p class="two-columns__paragraph">
+                  Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+                  горизонта — спокойного Куршского залива с одной стороны и
+                  подёрнутого рябью волн Балтийского моря с другой. Уникальная
+                  природная зона на краю российского анклава.
+                </p>
+                <p class="two-columns__paragraph">
+                  На этом Калининградская область не заканчивается. Для
+                  путешественника и исследователя там же по соседству — самая
+                  западная точка России, Балтийская коса, — и немецкое наследие
+                  россыпи небольших приморских городов. Атмосфера здешних мест
+                  исключает суету, окуная в спокойствие природы и запах стального,
+                  прохладного моря.
+                </p>
+              </div>
+            
+          </li>
 
-          <div class="two-columns__paragraphs">
-            <p class="two-columns__paragraph">
-              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-              горизонта — спокойного Куршского залива с одной стороны и
-              подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на краю российского анклава.
-            </p>
-            <p class="two-columns__paragraph">
-              На этом Калининградская область не заканчивается. Для
-              путешественника и исследователя там же по соседству — самая
-              западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест
-              исключает суету, окуная в спокойствие природы и запах стального,
-              прохладного моря.
-            </p>
-          </div>
-        </div>
+          <li class="two-columns">
+            <h2 class="two-columns__title">Кольский</h2>
+            <div class="two-columns__url-zone">
+              <p class="two-columns__url">URL</p>
+              <a
+                class="two-columns__link"
+                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                target="blank"
+                >National Geographic</a
+              >
+            </div>
+            <img
+              class="two-columns__image"
+              alt="кольский"
+              src="./images/place-kolsky.jpg"
+            />
+            <div class="two-columns__paragraphs">
+              <p class="two-columns__paragraph">
+                Почти весь полуостров находится за Полярным кругом. Саамская
+                тундра, от которой на юг — тайга, а на север — Ледовитый океан,
+                прикидывающийся Баренцевым морем.
+              </p>
+              <p class="two-columns__paragraph">
+                Возможно, вы смотрели Звягинцева и даже слышали историю
+                арктического фестиваля в Териберке. Возможно, слово «Хибины» не
+                осталось под снегом школьных воспоминаний об уроках географии.
+                Возможно, вы не интересовались пронизывающей земную кору
+                сверхглубокой скважиной, а от апатитов вас давно накрывает апатия.
+                Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                в Мурманск.
+              </p>
+            </div>
+          </li>
 
-        <div class="two-columns">
-          <h2 class="two-columns__title">Кольский</h2>
-          <div class="two-columns__url-zone">
-            <p class="two-columns__url">URL</p>
-            <a
-              class="two-columns__link"
-              href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-              target="blank"
-              >National Geographic</a
-            >
-          </div>
-          <img
-            class="two-columns__image"
-            alt="кольский"
-            src="./images/place-kolsky.jpg"
-          />
-          <div class="two-columns__paragraphs">
-            <p class="two-columns__paragraph">
-              Почти весь полуостров находится за Полярным кругом. Саамская
-              тундра, от которой на юг — тайга, а на север — Ледовитый океан,
-              прикидывающийся Баренцевым морем.
-            </p>
-            <p class="two-columns__paragraph">
-              Возможно, вы смотрели Звягинцева и даже слышали историю
-              арктического фестиваля в Териберке. Возможно, слово «Хибины» не
-              осталось под снегом школьных воспоминаний об уроках географии.
-              Возможно, вы не интересовались пронизывающей земную кору
-              сверхглубокой скважиной, а от апатитов вас давно накрывает апатия.
-              Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-              в Мурманск.
-            </p>
-          </div>
-        </div>
+          <li class="two-columns">
+            <h2 class="two-columns__title">Алтай</h2>
+            <div class="two-columns__url-zone">
+              <p class="two-columns__url">URL</p>
+              <a
+                class="two-columns__link"
+                href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                target="blank"
+                >Facebook</a
+              >
+            </div>
+            <img
+              class="two-columns__image"
+              alt="алтай"
+              src="./images/place-altai.jpg"
+            />
+            <div class="two-columns__paragraphs">
+              <p class="two-columns__paragraph">
+                Алтай — одно из красивейших мест в России. В первую очередь из-за
+                гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+                соснами, горные реки и озёра. А если вы откроете в автомобиле
+                окна, сможете познакомиться с невидимым чудом здешних мест —
+                горным воздухом.
+              </p>
+              <p class="two-columns__paragraph">
+                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                Так вы увидите всё разнообразие местной флоры и фауны. По лесам
+                Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
+                косули. И знаменитые манулы — тоже обитатели Алтайского края.
+              </p>
+            </div>
+          </li>
 
-        <div class="two-columns">
-          <h2 class="two-columns__title">Алтай</h2>
-          <div class="two-columns__url-zone">
-            <p class="two-columns__url">URL</p>
-            <a
-              class="two-columns__link"
-              href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-              target="blank"
-              >Facebook</a
-            >
-          </div>
-          <img
-            class="two-columns__image"
-            alt="алтай"
-            src="./images/place-altai.jpg"
-          />
-          <div class="two-columns__paragraphs">
-            <p class="two-columns__paragraph">
-              Алтай — одно из красивейших мест в России. В первую очередь из-за
-              гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
-              соснами, горные реки и озёра. А если вы откроете в автомобиле
-              окна, сможете познакомиться с невидимым чудом здешних мест —
-              горным воздухом.
-            </p>
-            <p class="two-columns__paragraph">
-              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
-              Так вы увидите всё разнообразие местной флоры и фауны. По лесам
-              Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
-              косули. И знаменитые манулы — тоже обитатели Алтайского края.
-            </p>
-          </div>
-        </div>
+          <li class="two-columns">
+            <h2 class="two-columns__title">Зимний Байкал</h2>
+            <div class="two-columns__url-zone">
+              <p class="two-columns__url">URL</p>
+              <a
+                class="two-columns__link"
+                href="https://vk.com/baikalmile"
+                target="blank"
+                >https://vk.com/baikalmile</a
+              >
+            </div>
+            <img
+              class="two-columns__image"
+              alt="зимнее озеро"
+              src="images/place-winter-baikal.jpg"
+            />
+            <div class="two-columns__paragraphs">
+              <p class="two-columns__paragraph">
+                Всем известен Байкал как крупнейшее озеро в мире. Многие также
+                знают, что это самый большой источник пресной воды и одно из
+                красивейших мест в России.
+              </p>
+              <p class="two-columns__paragraph">
+                Конечно, это всё так. Но Байкал ещё идеальное место
+                для соревнований по скийорингу. Это такой вид спорта, когда лыжник
+                привязывает себя к мотоциклу, и тандем старается развить как можно
+                бóльшую скорость на льду. В марте 2019 года на фестивале
+                «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+              </p>
+            </div>
+          </li>
 
-        <div class="two-columns">
-          <h2 class="two-columns__title">Зимний Байкал</h2>
-          <div class="two-columns__url-zone">
-            <p class="two-columns__url">URL</p>
-            <a
-              class="two-columns__link"
-              href="https://vk.com/baikalmile"
-              target="blank"
-              >https://vk.com/baikalmile</a
-            >
-          </div>
-          <img
-            class="two-columns__image"
-            alt="зимнее озеро"
-            src="images/place-winter-baikal.jpg"
-          />
-          <div class="two-columns__paragraphs">
-            <p class="two-columns__paragraph">
-              Всем известен Байкал как крупнейшее озеро в мире. Многие также
-              знают, что это самый большой источник пресной воды и одно из
-              красивейших мест в России.
-            </p>
-            <p class="two-columns__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место
-              для соревнований по скийорингу. Это такой вид спорта, когда лыжник
-              привязывает себя к мотоциклу, и тандем старается развить как можно
-              бóльшую скорость на льду. В марте 2019 года на фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
-            </p>
-          </div>
-        </div>
+          <li class="two-columns">
+            <h2 class="two-columns__title">Карелия</h2>
+            <div class="two-columns__url-zone">
+              <p class="two-columns__url">URL</p>
+              <a
+                class="two-columns__link"
+                href="http://vodlozero.ru"
+                target="blank"
+                >http://vodlozero.ru/</a
+              >
+            </div>
+            <img
+              class="two-columns__image"
+              alt="карелия"
+              src="images/place-karelia.jpg"
+            />
 
-        <div class="two-columns">
-          <h2 class="two-columns__title">Карелия</h2>
-          <div class="two-columns__url-zone">
-            <p class="two-columns__url">URL</p>
-            <a
-              class="two-columns__link"
-              href="http://vodlozero.ru"
-              target="blank"
-              >http://vodlozero.ru/</a
-            >
-          </div>
-          <img
-            class="two-columns__image"
-            alt="карелия"
-            src="images/place-karelia.jpg"
-          />
-
-          <div class="two-columns__paragraphs">
-            <p class="two-columns__paragraph">
-              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-              сибирская лиственница не растёт западнее Водлозера. Зато здесь она
-              вымахивает на 30 метров — леса карельских национальных парков
-              из-за непроходимых болот никогда не знали топора. Некоторым соснам
-              уже больше чем полтысячелетия. Прикоснитесь к живому существу,
-              видевшему солнце раньше, чем увидал его Иван Грозный. В
-              девственном лесу на сотню километров не встретишь тропы. А на
-              редких тропинках деревья в паре метров от земли помечены
-              медвежьими когтями. Чтобы все знали, кто тут хозяин.
-            </p>
-          </div>
-        </div>
+            <div class="two-columns__paragraphs">
+              <p class="two-columns__paragraph">
+                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                сибирская лиственница не растёт западнее Водлозера. Зато здесь она
+                вымахивает на 30 метров — леса карельских национальных парков
+                из-за непроходимых болот никогда не знали топора. Некоторым соснам
+                уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+                видевшему солнце раньше, чем увидал его Иван Грозный. В
+                девственном лесу на сотню километров не встретишь тропы. А на
+                редких тропинках деревья в паре метров от земли помечены
+                медвежьими когтями. Чтобы все знали, кто тут хозяин.
+              </p>
+            </div>
+          </li>
+        </ul>
       </section>
 
       <section class="cover">
@@ -319,7 +322,7 @@
           class="cover__link"
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           target="blank">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h3 class="cover__title">До Байкала «на собаках»</h3>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе и iframes — путешествие от
             столицы до Байкала на электричках.
