--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="normalize" href="./vendor/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./vendor/fonts/fonts.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Russian travel</title>
