--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="normalize" href="./vendor/normalize.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./vendor/fonts/fonts.css">
+    <link rel="stylesheet" href="./pages/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Russian travel</title>
   </head>
