--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </section>
 
       <section class="places">
-        <ul>
+        <ul class="places__list">
           <li class="two-columns">
             <h2 class="two-columns__title">Куршская коса</h2>
               <div class="two-columns__url-zone">
