поправлены комментарии ревью

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Russian travel</title>
   </head>
 
-  <body class="body">
+  <body>
     <div class="page">
       <header class="header">
         <div class="header__logo"></div>
         <div class="header__lang-links">
-          <a class="header__lang-link header__lang-link_ru" href="#">Ru</a>
-          <a class="header__lang-link header__lang-link_en" href="#">En</a>
+          <a class="header__lang-link header__lang-link_selected" href="#">Ru</a>
+          <a class="header__lang-link" href="#">En</a>
         </div>
       </header>
 
@@ -29,7 +29,7 @@
 
         <section class="intro">
           <div class="intro__card">
-            <h3 class="intro__title">Чего мы там не видели?</h3>
+            <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">
               По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
               36% планируют провести отпуск в родной стране. Мол, чего мы тут,
@@ -150,7 +150,7 @@
             <li class="two-columns">
               <h2 class="two-columns__title">Куршская коса</h2>
                 <div class="two-columns__url-zone">
-                  <p class="two-columns__url">URL</p>
+                  <p class="two-columns__url">Url</p>
                   <a
                     class="two-columns__link"
                     href="http://park-kosa.ru"
@@ -186,7 +186,7 @@
             <li class="two-columns">
               <h2 class="two-columns__title">Кольский</h2>
               <div class="two-columns__url-zone">
-                <p class="two-columns__url">URL</p>
+                <p class="two-columns__url">Url</p>
                 <a
                   class="two-columns__link"
                   href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
@@ -220,7 +220,7 @@
             <li class="two-columns">
               <h2 class="two-columns__title">Алтай</h2>
               <div class="two-columns__url-zone">
-                <p class="two-columns__url">URL</p>
+                <p class="two-columns__url">Url</p>
                 <a
                   class="two-columns__link"
                   href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
@@ -253,7 +253,7 @@
             <li class="two-columns">
               <h2 class="two-columns__title">Зимний Байкал</h2>
               <div class="two-columns__url-zone">
-                <p class="two-columns__url">URL</p>
+                <p class="two-columns__url">Url</p>
                 <a
                   class="two-columns__link"
                   href="https://vk.com/baikalmile"
@@ -285,7 +285,7 @@
             <li class="two-columns">
               <h2 class="two-columns__title">Карелия</h2>
               <div class="two-columns__url-zone">
-                <p class="two-columns__url">URL</p>
+                <p class="two-columns__url">Url</p>
                 <a
                   class="two-columns__link"
                   href="http://vodlozero.ru"
