исправлены размеры картинок

--- a/index.html
+++ b/index.html
@@ -63,84 +63,84 @@
                 <img
                   class="photo-grid__item"
                   alt="купе"
-                  src="./images/photo-grid-train.jpg"
+                  src="./images/photo-grid-train.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="горы"
-                  src="./images/photo-grid-atharva-tulsi.jpg"
+                  src="./images/photo-grid-atharva-tulsi.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="туман"
-                  src="./images/photo-grid-tuman.jpg"
+                  src="./images/photo-grid-tuman.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="сочи"
-                  src="./images/photo-grid-sochi.jpg"
+                  src="./images/photo-grid-sochi.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="колесо"
-                  src="./images/photo-grid-arisa.jpg"
+                  src="./images/photo-grid-arisa.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="пляж"
-                  src="./images/photo-grid-baikal.jpg"
+                  src="./images/photo-grid-baikal.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="эльбрус"
-                  src="./images/photo-grid-elbrus.jpg"
+                  src="./images/photo-grid-elbrus.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="переход"
-                  src="./images/photo-grid-kondratiev.jpg"
+                  src="./images/photo-grid-kondratiev.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="камчатка"
-                  src="./images/photo-grid-kamchatka-1.jpg"
+                  src="./images/photo-grid-kamchatka-1.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="горы камчатки"
-                  src="./images/photo-grid-kamchatka-2.jpg"
+                  src="./images/photo-grid-kamchatka-2.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="байкал"
-                  src="./images/photo-grid-baikal-2.jpg"
+                  src="./images/photo-grid-baikal-2.png"
                 />
               </li>
               <li>
                 <img
                   class="photo-grid__item"
                   alt="облака"
-                  src="./images/photo-grid-ergaki.jpg"
+                  src="./images/photo-grid-ergaki.png"
                 />
               </li>
             </ul>
@@ -164,7 +164,7 @@
                     alt="куршская коса"
                     src="images/place-kosa.jpg"
                   />
-        
+
                   <div class="two-columns__paragraphs">
                     <p class="two-columns__paragraph">
                       Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
@@ -181,7 +181,7 @@
                       прохладного моря.
                     </p>
                   </div>
-                
+
               </li>
 
               <li class="two-columns">
@@ -329,7 +329,7 @@
               </p>
             </a>
           </section>
-        </main>  
+        </main>
 
         <footer class="footer">
           <div class="footer__container">
@@ -378,7 +378,7 @@
             <p class="footer__copyright">&copy; 2020. Дутова Елизавета</p>
           </div>
         </footer>
-      </div>  
+      </div>
     </div>
   </body>
 </html>
